...
            </objects>
            <point key="canvasLocation" x="-843" y="-336"/>
        </scene>
        <!--Log in-->
        <scene sceneID="qwz-Gt-EIl">
            <objects>
                <viewController title="Log in" id="zw1-8C-L0E" userLabel="Log in" customClass="LoginViewController" customModule="MyShop" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3tX-EF-o42">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tAz-xy-Aei">
                                <rect key="frame" x="10" y="219" width="394" height="34"/>
                                <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="userNameField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="LzE-HT-Dal"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zy0-Y4-Pjc">
                                <rect key="frame" x="10" y="294" width="394" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="w2e-xE-OVj"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-i8-VdN">
                                <rect key="frame" x="10" y="398" width="394" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="PCa-9y-jBj"/>
                                </constraints>
                                <state key="normal" title="Sing in">
                                    <color key="titleColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="singinPressButton:" destination="zw1-8C-L0E" eventType="touchUpInside" id="FaE-lE-140"/>
                                    <segue destination="vXx-jc-ZED" kind="show" id="W3r-7u-Nrr"/>
                                </connections>
...
