...
    @IBAction func loginPressButton(_ sender: Any) {
        
        guard let userName = usernameTextField.text, let userPassword = passwordTextField.text,
            userName != "", userPassword != ""
            else {
            let alert = UIAlertController(title: "Error", message: "You must fill in your username and password", preferredStyle: .alert)
            let action = UIAlertAction(title: "OK", style: .cancel, handler: nil)
            alert.addAction(action)
            self.present(alert, animated: true, completion: nil)
                
            return
        }

...
        auth.login(userName: userName, password: userPassword) { response in
            switch response.result {
            case .success(let result):
                MyShopSession.shared.currentUser = result.user
                DispatchQueue.main.async {
                   
                    let storyboard = UIStoryboard(name: "Goods", bundle: nil)
                    let homeViewController = storyboard.instantiateViewController(withIdentifier: "Goods")
                    UIApplication.shared.windows.first!.rootViewController = homeViewController
                  
                    Analytics.logEvent("Login_success", parameters: nil)
                }
            case .failure(_):
...
