...
        
        let auth = requestFactory.makeRegisterUserRequestFatory()
        auth.registerUser(userName: userName, password: userPassword) { response in
            switch response.result {
            case .success(_):
                DispatchQueue.main.async {
                    let alert = UIAlertController(title: "Success", message: "Registration was completed successfully", preferredStyle: .alert)
                    let action = UIAlertAction(title: "OK", style: .cancel, handler: nil)
                    alert.addAction(action)
                    self.present(alert, animated: true, completion: nil)
                    
                    Analytics.logEvent("Sing_in_Success", parameters: nil)
                    
...
